(lang dune 3.0)

(name parallel_rpsblast)

(generate_opam_files true)

(source
 (github mooreryan/squiggle_salad))

(authors "Ryan M. Moore")

(maintainers "Ryan M. Moore")

(license "Apache-2.0 OR MIT")

(documentation https://github.com/mooreryan/squiggle_salad)

(package
 (name parallel_rpsblast)
 (version 0.1.0)
 (synopsis "Parallel RPS-BLAST")
 (description "Splits query sequences, runs an instance of RPS-BLAST on each query in parallel, then collates the results.")
 ;; TODO depends
 (depends
   ocaml
  (dune (>= "3.0"))
  (bio_io (>= "0.4.0"))
  (cmdliner (>= "1.1.0"))
   core
  (little_logger (>= "0.2.0"))
   ppx_jane
   shexp)
 (tags
  (bioinformatics)))
